--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "gavnish",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.1.2",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "imagekit": "^4.1.4",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.2",
     "nodemon": "^2.0.22",
     "socket.io": "^4.7.1"
   }
